[gd_scene load_steps=10 format=3 uid="uid://4xif6m82wbpo"]

[ext_resource type="Script" path="res://src/GameBoard/Setup.gd" id="1_7ci8e"]
[ext_resource type="Script" path="res://src/GameBoard/AbilityCard.gd" id="1_t7njt"]
[ext_resource type="StyleBox" uid="uid://nrrp32xv522l" path="res://src/GameBoard/Card.tres" id="2_hbrmv"]
[ext_resource type="StyleBox" uid="uid://dd7h5lyq1hbff" path="res://src/Themes/AbilityBox.tres" id="3_nj77c"]
[ext_resource type="Theme" uid="uid://y7aot7vogdr6" path="res://src/Themes/MainTheme.tres" id="4_wqaq7"]
[ext_resource type="Script" path="res://src/GameBoard/Ability.gd" id="14_rs7fs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxa1m"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0

[sub_resource type="Theme" id="Theme_qwl5k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i4get"]

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(100, 140)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_vxa1m")
script = ExtResource("1_7ci8e")

[node name="_" type="AspectRatioContainer" parent="."]
layout_mode = 2
ratio = 0.72

[node name="InternalContainer" type="PanelContainer" parent="_"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_hbrmv")
script = ExtResource("1_t7njt")

[node name="CardImage" type="PanelContainer" parent="_/InternalContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_qwl5k")
theme_override_styles/panel = SubResource("StyleBoxTexture_i4get")

[node name="Contents" type="VBoxContainer" parent="_/InternalContainer/CardImage"]
layout_mode = 2

[node name="_" type="Control" parent="_/InternalContainer/CardImage/Contents"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
mouse_filter = 1

[node name="_2" type="PanelContainer" parent="_/InternalContainer/CardImage/Contents"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_nj77c")

[node name="Ability" type="RichTextLabel" parent="_/InternalContainer/CardImage/Contents/_2"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_wqaq7")
bbcode_enabled = true
text = "Ability {U}"
fit_content = true
script = ExtResource("14_rs7fs")

[node name="_3" type="Control" parent="_/InternalContainer/CardImage/Contents"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="gui_input" from="_/InternalContainer" to="_/InternalContainer" method="_on_gui_input"]
[connection signal="mouse_entered" from="_/InternalContainer" to="_/InternalContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="_/InternalContainer" to="_/InternalContainer" method="_on_mouse_exited"]
